# shima_wf

./: .gitignore  README.md  __init__.py  clean_pycache.py  export_synced_islands.py  install.py  pyproject.toml  requirements.txt  test_asset_url.py  test_batch.py  test_inspector.py  test_latent_inputs_mock.py  test_seed_logger.py  test_transformer.py  verify_commons.py
.agents/workflows/: sync-to-public.md
.github/workflows/: publish-to-comfy-manager.yml
api/: __init__.py  auth.py  client.py
assets/: shima.wired_xl.base.json
assets/data/: excel-editor.html  shima_sheets.xlsx  shima_sheets_working_copy.xlsx  ~$shima_sheets.xlsx
assets/styles/: .gitkeep
config/: __init__.py  artists.tsv  official_dependencies.json  site_default_settings.json
docs/: README.md
docs/releases/: v2.0.10.md  v2.0.11.md  v2.0.12.md  v2.0.3.md  v2.0.4.md  v2.0.8.md  v2.0.9.md
docs/user_docs/: Shima_Node_Reference.md  Shima_Nodes_Overview.md  concepts.md  faq.md  getting-started.md  readme.md  v2.0.5_release_notes.md
example_workflows/: .gitkeep
js/: canary_widgets.js  datapreview_test_widgets.js  datapreview_test_widgets.js.backup  dependency_generator.js  dependency_installer.js  file_saver.js  grid_widget.js  inspector_widgets.js  master_prompt_widgets.js  model_citizen.js  noodman.js  seed_logger_widgets.js  shima.js  shima_backdrop.js  shima_batch_manager.js  shima_bndler.js  shima_checker.js  shima_choice_switch.js  shima_control_panel.js  shima_custodian.js  shima_debug_widgets.js.DISABLED  shima_demux.js  shima_demux_list.js  shima_dymo.js  shima_faders.js  shima_headline.js  shima_highway_bypass.js  shima_highway_detour.js  shima_hub.js  shima_interactive_crop.js  shima_knobs.js  shima_macro_expander.js  shima_multi_indicator.js  shima_multisaver_grid.js  shima_omnijog.js  shima_panels.js  shima_pilot_light.js  shima_rgb_indicator.js  shima_seg_selector.js  shima_slice_combiner_hub.js  (+13 more)
js/experiments/: README.md  bottom_toggles.js  browser server log.txt
nodes/: __init__.py  batch_processor.py  carousel_preview.py  commons.py  control_agent.py  datapreview_test.py  dependency_nodes.py  file_namer.py  file_saver.py  headline.py  hub.py  inspector.py  interactive_crop.py  latent_maker.py  legacy.py  lora_utils.py  mascot.py  master_prompt.py  model_citizen.py  model_utils.py  multi_saver.py  nikosis_compat.py  nsfw_checker.py  panel_bndler.py  passer_impl.py  photo_remix.py  preview.py  preview_compare.py  primitives.py  rich_content.py  sampler.py  sampler_commons.py  seed_controller.py  seed_logger.py  segs_nodes.py  server.py  slice_combiner_hub.py  sliced_commons.py  sliced_image_hub.py  sliced_upscaler.py  (+9 more)
nodes/processors/: __init__.py
nodes/processors/depth_anything_v2/: __init__.py  dinov2.py
nodes/processors/depth_anything_v2/util/: __init__.py
scripts/: sync-public.ps1
utils/: asset_manager.py  build_official_deps.py  deep_search_v2.py  harvest_urls.py  rename_styles.py  search_data_deep.py  search_data_v3.py  settings_utils.py  styler_loader.py
