[project]
name = "comfyui-shima"
version = "2.0.12"
description = "A premium UI/UX ecosystem and foundational styling framework for ComfyUI workflows."
authors = [
    { name = "Aegisflow", email = "contact@shima.wf" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["comfyui", "workflow", "marketplace", "ai", "image-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://shima.wf"
Repository = "https://github.com/KDB-USJP/Shima"
Documentation = "https://github.com/KDB-USJP/Shima/tree/main/docs"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.comfy]
PublisherId = "kdb"
DisplayName = "Shima"
# Re-triggering publication Action with correct PublisherId casing
